--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.438.0",
     "moment": "^2.30.1",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
