--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^5.3.7",
     "@google/generative-ai": "^0.17.1",
     "@neondatabase/serverless": "^0.9.4",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -32,7 +33,7 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-speech-to-text": "^0.8.0",
     "react-webcam": "^7.2.0",
-    "sonner": "^1.5.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0"
